--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2196F3"
-    tools:context=".MainActivity">
+    tools:context="com.example.dispositivosmoveisatv2.MainActivity">
 
     <ImageView
         android:id="@+id/imageView6"
